--- a/css_/reset.css
+++ b/css_/reset.css
@@ -1,5 +1,5 @@
 html, body, div, span, applet, object, iframe,
-blockquote, pre,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
@@ -32,13 +32,6 @@ html, body {
 	line-height: 1; 
 	overflow: hidden;
 	position: relative;
-	font-size: 14px; 
-}
-
-div#wrap { 
-    width: 100%; 
-    height: 100vh; 
-	overflow: hidden; 
 }
 
 select, input { font-family: 'Opensans-regular', san-serif; }
@@ -57,17 +50,7 @@ table {
 	border-spacing: 0;
 }
 
-h1, h2, h3, h4, h5, h6 { 
-	margin: 0;
-	padding: 0;
-	font-family: 'Opensans-semibold', sans-serif; 
-}
-
-p { 
-	margin: 0; 
-	padding: 0; 
-	line-height: 1.3rem; 
-}
+h1, h2, h3, h4, h5, h6 { font-family: 'Opensans-semibold', sans-serif; }
 
 a { 
 	text-decoration: none; 
@@ -75,5 +58,14 @@ a {
 	cursor: pointer;
 }
 
-small { font-size: 85%; }
+div#wrap { 
+    width: 100%; 
+    height: 100vh; 
+	overflow: hidden; 
+}
+
+small {
+	line-height: 1.25em; 
+	font-size: .8em; 
+}
 
