--- a/css/reset.css
+++ b/css/reset.css
@@ -61,7 +61,10 @@ h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 	padding: 0;
 	font-family: 'Opensans-semibold', sans-serif; 
+	font-size: 100%; 
+	color: #525252; 
 }
+
 
 p { 
 	margin: 0; 
