--- a/css/component.css
+++ b/css/component.css
@@ -1,9 +1,3 @@
-:root { 
-    --bg-main: #1a75ba; 
-    --deep-gray: #676d8f;  
-    --smooth-gray: #90a6bb; 
-}
-
 /* 
     - nav component
     1. li.nav-title span: 소제목 
@@ -15,28 +9,59 @@
     display: flex; 
     margin-bottom: 1rem; 
     text-transform: uppercase; 
-    font-family: 'Opensans-bold', sans-serif; 
     font-size: .815rem; 
     color: currentColor; 
 }
 
 .nav li a.nav-link { 
+    background: #fff; 
+    display: block; 
     min-width: 2.75rem; 
-    height: 2.75rem; 
-    display: flex; 
-    display: -ms-flexbox; 
-    align-items: center; 
-    -ms-flex-align: center; 
-    justify-content: space-between;
-    -ms-flex-pack: space-between; 
-    padding: 0 .525em; 
-    text-transform: capitalize; 
-    color: currentColor; 
+    height: 48px; 
+    line-height: 48px; 
+    padding: 0 1.5rem; 
+    border-left: 5px solid #d8d8d8;     
+    border-bottom: 1px solid #e1e2e2; 
+    letter-spacing: .05rem;
+    font-family: inherit;
+    font-size: 1rem;         
+    font-weight: 900;
+    color: #454d5b; 
 }
 
-.nav li a.nav-link span { 
+.nav li:first-child a.nav-link { border-top: 0; }
+
+.nav-sub { 
+    background: #f7f7f7;
+    border-bottom: 1px solid #e1e2e2; 
+    padding: 1.5rem 1.85rem; 
+    padding-right: 0;  
+    display: none; 
+    font-size: .95rem; 
+}
+
+.nav-sub.on { display: block; }
+
+.nav-sub p { 
+    margin-bottom: .85rem; 
+    color: #454d5b;
+}
+
+.nav-sub li { 
+    display: flex; 
+    align-items: center; 
+    padding: .5rem 0;  
+    color: #454d5b; 
+}
+
+.nav-sub li::before { 
+    content:''; 
     display: inline-block; 
-    padding: 0 .25rem; 
+    width: 2px; 
+    height: 2px; 
+    background: #3f4655; 
+    border-radius: 50%; 
+    margin-right: .5rem; 
 }
 
 /* 
@@ -49,46 +74,48 @@
 */
 
 .btn-group { 
-    display: inline-flex; 
+    display: flex; 
     display: -ms-flexbox; 
     align-items: center; 
     -ms-flex-align: center; 
 }
 
-.btn-group button { margin-left: .525rem; }
+.btn-group button { margin-left: .7rem; }
 .btn-group button:first-of-type { margin-left: 0; }
 
 button { 
     background: transparent; 
-    min-width: 4.5rem; 
+    min-width: 90px; 
     max-width: 10rem; 
-    height: 2.75rem; 
-    line-height: 2.75rem; 
+    height: 26px; 
+    line-height: 25px; 
     display: inline-block;  
     padding: 0 1em; 
     border: none; 
     border: 1px solid transparent; 
-    border-radius: .225em; 
+    border-radius: 1rem; 
     overflow: hidden; 
     white-space: nowrap; 
     text-overflow: ellipsis; 
     vertical-align: middle; 
     outline: none; 
-    font-family: 'Opensans-regular', sans-serif; 
-    font-size: .925rem; 
-    /* color: #1688c9;  */
+    font-family: 'NanumSquare_acR', 'Opensans-regular', sans-serif; 
+    font-size: .85rem; 
     color: currentColor; 
     cursor: pointer;
-    transition: all .3s ease-in-out; 
+    transition: all .2s ease-in-out; 
 }
 
+button span { margin-left: .5rem; }
 
-/* =========== button 형태 */
+/* ============================================================ */
 
 .btn-icon { 
-    width: 1.875rem; 
+    width: 27px; 
     min-width: 0; 
-    font-size: 1.25rem; 
+    padding: 0; 
+    border-radius: 50%;
+    font-size: 1.15rem; 
 }
 
 .btn-link { 
@@ -105,13 +132,18 @@ button {
     margin: 1rem 0; 
 }
 
-.btn-border { background: transparent; }
+.btn-border { 
+    background: transparent; 
+    border: 1px solid #d8d8d8; 
+}
 
-.btn-border.primary { color:#1a75ba; }
+/* ============================================================ */
+
+.btn-border.primary { color:#1676ba; }
 .btn-border.warning { color:#f5803e; }
 .btn-border.danger { color:#f54e5d; }
 
-/* =========== button close */
+/* ============================================================ */
 
 .btn-close { min-width: 0; }
 
@@ -131,7 +163,6 @@ button {
     transition: all .3s ease-in-out; 
 }
 
-
 .btn-close:not(.arrow)::before { transform: rotate(45deg); }
 .btn-close:not(.arrow)::after { transform: rotate(-45deg); }
 
@@ -140,17 +171,12 @@ button {
     background: #1676ba;
 }
 
-
-/* =========== button size */
+/* ============================================================ */
 
 .btn-sm { font-size: 85%; }
 .btn-lg { font-size: 115%; }
 
-
-/* =========== button effect */
-
-button.uppercase, 
-.btn-group.uppercase button { text-transform: uppercase; }
+/* ============================================================ */
 
 button:not(.disabled):hover { opacity: .8; }
 
@@ -183,24 +209,176 @@ button.ripple:active::after {
     transition: 0s; 
 }
 
+/* ============================================================ */
 
 /* card */
 
 .card { 
     background: #fff; 
-    min-width: 250px; 
+    width: 100%; 
+    min-width: 350px; 
     display: inline-flex; 
     flex-direction: column; 
-    flex: 0 1 auto; 
-    border-radius: .325rem; 
-    box-shadow: 0 0 10px 1px rgba(0,0,0,0.125); 
+    /* border: 1px solid #d6d7db;  */
+    /* border-radius: .525rem;  */
+    /* box-shadow: 0 0 10px 1px rgba(210, 210, 210, 0.15);  */
+    color: #424753; 
 }
 
 .card .card-header { 
-    min-height: 40px; 
-    line-height: 40px; 
+    min-height: 25px; 
+    line-height: 25px; 
     display: flex; 
     align-content: center; 
-    padding: 0 1.25rem; 
 }
 
+.card .card-header h2 { font-size: 16px; }
+.card .card-header .header-desc { 
+    font-size: .7em; 
+    display: block; 
+}
+
+.card .card-header,
+.card .card-content, 
+.card .card-footer { 
+    padding: 1.5em 1.75em; 
+}
+
+/* form */
+
+form label { 
+    display: inline-block; 
+    margin-right: 1rem; 
+    font-size: .85rem; 
+    font-weight: 700;  
+    color: #454d5b; 
+}
+
+form input, 
+form select { 
+    min-width: 100px;   
+    min-height: 28px; 
+    line-height: 27px; 
+    margin-right: .75rem; 
+    padding-left: 1rem;  
+    display: inline-block; 
+    border: 1px solid #d8d8d8; 
+    border-radius: 1rem; 
+    outline: none; 
+    color: #969ea4; 
+    font-size: .85rem; 
+}
+
+form input { padding-left: 1.15em; }
+
+.sch-box { 
+    position: relative; 
+    display: flex; 
+    display: -ms-flexbox; 
+    height: 28px; 
+}
+
+.sch-box input[type="text"] { 
+    background: #f7f7f7; 
+    padding-left: 35px; 
+}
+
+.chk-box { 
+    display: flex; 
+    display: -ms-flexbox; 
+    align-items: center; 
+    -ms-flex-align: center;
+}
+
+.chk-box label { 
+    margin-left: 2px; 
+    font-size: .85rem; 
+}
+
+select { 
+    background: url('../img/select_arrow.png') no-repeat 90%; 
+    background-size: 10px;
+    -webkit-appearance: none;
+}
+
+select::-ms-expand { display: none; }
+
+.sch-box::before {
+    content:''; 
+    display: block; 
+    position: absolute; 
+    top: 7px; 
+    left: 10px;  
+    width: 25px; 
+    height: 25px; 
+    background: url('../img/search_bl.png') no-repeat; 
+    background-size: 14px; 
+}
+
+form .input-group input { margin-left: .5rem; }
+form .input-group input:first-child { margin-left: 0; }
+
+/* crumb */
+
+.crumb-component ul { 
+    display: flex; 
+    display: -ms-flexbox; 
+    align-items: center; 
+    -ms-flex-align: center; 
+    font-size: .825rem; 
+}
+
+.crumb-component ul li { 
+    margin-left: .5rem; 
+    color: var(--deep-blue); 
+}
+.crumb-component ul li:first-child { margin-left: 0; }
+
+/* table */
+
+.table-component { 
+    min-width: 280px; 
+    height: 100%; 
+    border-bottom: 1px solid #d8d8d8; 
+}
+
+.table-component table { 
+    width: 100%; 
+    border-top: 1px solid #d8d8d8;     
+}
+
+table th, table td { 
+    height: 32px; 
+    /* line-height: 32px;     */
+    vertical-align: middle;
+    color: #3f4655; 
+}
+
+table th { 
+    border-bottom: 1px solid #d8d8d8; 
+    font-size: .8rem;     
+    font-weight: 700;
+    /* font-family: 'NanumSquare_acEB', san-serif; */
+    color: #9fa2aa; 
+}
+
+table td { 
+    text-align: center; 
+    font-size: .925rem; 
+}
+
+.container.header .table-component { 
+    max-height: 132px; 
+    border-top: 1px solid #d8d8d8; 
+    border-bottom-width: 2px;
+    overflow: auto;
+}
+
+/* total-num  */
+
+.total-num {
+    padding-right: 1rem;
+    letter-spacing: -.05rem;
+    font-size: .925rem; 
+    color: rgb(63, 70, 85); 
+}
