--- a/css/reset.css
+++ b/css/reset.css
@@ -2,7 +2,7 @@ html, body, div, span, applet, object, iframe,
 blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
+small, strike, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
@@ -16,8 +16,12 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	font-family: 'Opensans-regular', san-serif;
-	vertical-align: baseline;	
+	font-family: 'NanumSquare_acR', 'Opensans-regular', 'NotoSans-regular', sans-serif; 
+	-webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    backface-visibility: hidden;
+    text-rendering: auto;
+	transform:skew(-0.001deg)
 }
 
 *, ::before, ::after { box-sizing: border-box; }
@@ -29,22 +33,27 @@ footer, header, hgroup, menu, nav, section {
 }
 
 html, body { 
+	background: #f7f8ff; 
 	line-height: 1; 
 	overflow: hidden;
 	position: relative;
 	font-size: 14px; 
+	-webkit-font-smoothing: antialiased;
+	color: #454d5b; 
 }
 
 div#wrap { 
-    width: 100%; 
+	width: 100%; 
     height: 100vh; 
-	overflow: hidden; 
 }
 
-select, input { font-family: 'Opensans-regular', san-serif; }
+select, input, button { 
+	font-family: 'NanumSquare_acR','Opensans-regular','NotoSans-regular', sans-serif; 
+	display: block; 
+	cursor: pointer;
+}
 
 ol, ul { list-style: none; }
-
 blockquote, q { quotes: none; }
 
 blockquote:before, blockquote:after,
@@ -52,6 +61,7 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
@@ -60,16 +70,12 @@ table {
 h1, h2, h3, h4, h5, h6 { 
 	margin: 0;
 	padding: 0;
-	font-family: 'Opensans-semibold', sans-serif; 
 	font-size: 100%; 
-	color: #525252; 
 }
-
 
 p { 
 	margin: 0; 
 	padding: 0; 
-	line-height: 1.3rem; 
 }
 
 a { 
