아이콘 추가

--- a/css/component.css
+++ b/css/component.css
@@ -269,19 +269,41 @@ form select {
     font-size: .85rem; 
 }
 
-form input { padding-left: 1.15em; }
-
 .sch-box { 
     position: relative; 
     display: flex; 
     display: -ms-flexbox; 
-    height: 28px; 
+    align-items: center; 
+    -ms-flex-align: center; 
 }
 
 .sch-box input[type="text"] { 
     background: #f7f7f7; 
     padding-left: 35px; 
+    border: none; 
 }
+
+.sch-box input[type="button"] { 
+    background: #1676ba; 
+    min-width: 75px; 
+    padding: 0; 
+    border: none; 
+    color: #fff; 
+}
+
+.sch-box form::before {
+    content:''; 
+    display: block; 
+    position: absolute; 
+    top: 7px; 
+    left: 10px;  
+    width: 25px; 
+    height: 25px; 
+    background: url('../img/search_bl.png') no-repeat; 
+    background-size: 14px; 
+}
+
+.sch-box.lg input[type="text"] { min-width: 400px; }
 
 .chk-box { 
     display: flex; 
@@ -302,18 +324,6 @@ select {
 }
 
 select::-ms-expand { display: none; }
-
-.sch-box::before {
-    content:''; 
-    display: block; 
-    position: absolute; 
-    top: 7px; 
-    left: 10px;  
-    width: 25px; 
-    height: 25px; 
-    background: url('../img/search_bl.png') no-repeat; 
-    background-size: 14px; 
-}
 
 form .input-group input { margin-left: .5rem; }
 form .input-group input:first-child { margin-left: 0; }
