--- a/css/component.css
+++ b/css/component.css
@@ -5,64 +5,20 @@
     3. a.nav-link.nav-icon : 아이콘만 있는 경우  
 */
 
-.nav li.nav-title span { 
-    display: flex; 
-    margin-bottom: 1rem; 
-    text-transform: uppercase; 
-    font-size: .815rem; 
+.nav li.nav-tit { 
+    padding-left: 0; 
+    text-transform: uppercase;
     color: currentColor; 
 }
 
-.nav li a.nav-link { 
-    background: #fff; 
-    display: block; 
-    min-width: 2.75rem; 
-    height: 48px; 
-    line-height: 48px; 
-    padding: 0 1.5rem; 
-    border-left: 5px solid #d8d8d8;     
-    border-bottom: 1px solid #e1e2e2; 
-    letter-spacing: .05rem;
-    font-family: inherit;
-    font-size: 1rem;         
-    font-weight: 900;
-    color: #454d5b; 
+.nav li { 
+    padding: .5rem; 
+    padding-left: .65rem; 
+    font-size: .9rem; 
 }
 
-.nav li:first-child a.nav-link { border-top: 0; }
+.nav li a.active { font-weight: 700; }
 
-.nav-sub { 
-    background: #f7f7f7;
-    border-bottom: 1px solid #e1e2e2; 
-    padding: 1.5rem 1.85rem; 
-    padding-right: 0;  
-    display: none; 
-    font-size: .95rem; 
-}
-
-.nav-sub.on { display: block; }
-
-.nav-sub p { 
-    margin-bottom: .85rem; 
-    color: #454d5b;
-}
-
-.nav-sub li { 
-    display: flex; 
-    align-items: center; 
-    padding: .5rem 0;  
-    color: #454d5b; 
-}
-
-.nav-sub li::before { 
-    content:''; 
-    display: inline-block; 
-    width: 2px; 
-    height: 2px; 
-    background: #3f4655; 
-    border-radius: 50%; 
-    margin-right: .5rem; 
-}
 
 /* 
     - button component
@@ -80,68 +36,97 @@
     -ms-flex-align: center; 
 }
 
-.btn-group button { margin-left: .7rem; }
-.btn-group button:first-of-type { margin-left: 0; }
+.btn-group .btn { margin-left: .65rem; }
+.btn-group .btn:first-of-type { margin-left: 0; }
 
-button { 
+.btn-group.col .btn { margin-left: 0; margin-top: 1rem; }
+.btn-group.col .btn:first-of-type { margin-top: 0; }
+
+.btn { 
     background: transparent; 
-    min-width: 90px; 
+    min-width: 6rem; 
+    width: auto; 
     max-width: 10rem; 
-    height: 26px; 
-    line-height: 25px; 
+    height: 2.25rem; 
+    line-height: 2.125rem; 
     display: inline-block;  
-    padding: 0 1em; 
+    padding: 0; 
     border: none; 
     border: 1px solid transparent; 
-    border-radius: 1rem; 
+    border-radius: .325rem; 
     overflow: hidden; 
     white-space: nowrap; 
     text-overflow: ellipsis; 
     vertical-align: middle; 
     outline: none; 
-    font-family: 'NanumSquare_acR', 'Opensans-regular', sans-serif; 
-    font-size: .85rem; 
+    font-family: 'Opensans-regular', 'NanumSquare_acR', sans-serif; 
+    font-size: .835rem; 
     color: currentColor; 
     cursor: pointer;
     transition: all .2s ease-in-out; 
 }
 
-button span { margin-left: .5rem; }
+.btn.radius { border-radius: 3rem; }
+
+.btn.block { 
+    width: 100%; 
+    max-width: 100%; 
+    display: block; 
+}
+
+.btn span { margin-left: .75rem; }
 
 /* ============================================================ */
 
 .btn-icon { 
-    width: 27px; 
+    width: 2.25rem; 
     min-width: 0; 
     padding: 0; 
-    border-radius: 50%;
     font-size: 1.15rem; 
 }
+
+.btn.btn-icon.radius { border-radius: 50%; }
 
 .btn-link { 
     min-width: 0; 
     height: auto; 
-    line-height: 1rem; 
-    border-bottom: 1px solid currentColor; 
+    line-height: 1.25rem; 
+    border-radius: 0;
+    border-color: transparent !important; 
 }
+
+.btn-link.disabled { border-bottom: 0; }
 
 .btn-block { 
     width: 100%; 
     max-width: 100%; 
     display: block; 
-    margin: 1rem 0; 
 }
 
-.btn-border { 
-    background: transparent; 
-    border: 1px solid #d8d8d8; 
+.btn.btn-border:not(.disabled) { 
+    background: transparent !important; 
+    border: 1px solid currentColor; 
 }
 
 /* ============================================================ */
 
-.btn-border.primary { color:#1676ba; }
-.btn-border.warning { color:#f5803e; }
-.btn-border.danger { color:#f54e5d; }
+.btn-border.primary, 
+.btn-link.primary { color:#3470a6; }
+
+.btn-border.warning, 
+.btn-link.warning { color:#f1b437; }
+
+.btn-border.danger, 
+.btn-link.danger { color:#ee352e; }
+
+.btn-border.success, 
+.btn-link.success { color:#5cc19f; }
+
+.btn-link.primary, 
+.btn-link.warning, 
+.btn-link.danger, 
+.btn-link.success,
+.btn-link.disabled { background: transparent; }
 
 /* ============================================================ */
 
@@ -232,16 +217,10 @@ button.ripple:active::after {
     align-content: center; 
 }
 
-.card .card-header h2 { font-size: 16px; }
-.card .card-header .header-desc { 
-    font-size: .7em; 
-    display: block; 
-}
-
 .card .card-header,
 .card .card-content, 
 .card .card-footer { 
-    padding: 1.5em 1.75em; 
+    padding: 1.5em; 
 }
 
 /* form */
@@ -287,7 +266,7 @@ form select {
     background: #1676ba; 
     min-width: 75px; 
     padding: 0; 
-    border: none; 
+    border: 0; 
     color: #fff; 
 }
 
