--- a/css/reset.css
+++ b/css/reset.css
@@ -1,6 +1,6 @@
 html, body, div, span, applet, object, iframe,
 blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
+a, p, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
 b, u, i, center,
@@ -16,12 +16,13 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	font-family: 'NanumSquare_acR', 'Opensans-regular', 'NotoSans-regular', sans-serif; 
+	font-family: 'Opensans-regular', 'NotoSans-regular', 'NanumSquare_acR', sans-serif; 
 	-webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
     backface-visibility: hidden;
-    text-rendering: auto;
+	text-rendering: auto;
 	transform:skew(-0.001deg)
+	
 }
 
 *, ::before, ::after { box-sizing: border-box; }
@@ -37,18 +38,18 @@ html, body {
 	line-height: 1; 
 	overflow: hidden;
 	position: relative;
-	font-size: 14px; 
+	font-size: 16px; 
 	-webkit-font-smoothing: antialiased;
-	color: #454d5b; 
+	color: #50555F; 
 }
 
-div#wrap { 
+html, body, div#wrap { 
 	width: 100%; 
     height: 100vh; 
 }
 
 select, input, button { 
-	font-family: 'NanumSquare_acR','Opensans-regular','NotoSans-regular', sans-serif; 
+	font-family: 'Opensans-regular', 'NotoSans-regular', 'NanumSquare_acR', sans-serif; 
 	display: block; 
 	cursor: pointer;
 }
@@ -73,11 +74,6 @@ h1, h2, h3, h4, h5, h6 {
 	font-size: 100%; 
 }
 
-p { 
-	margin: 0; 
-	padding: 0; 
-}
-
 a { 
 	text-decoration: none; 
 	color: inherit; 
@@ -86,3 +82,24 @@ a {
 
 small { font-size: 85%; }
 
+::-webkit-scrollbar {
+	width: 20px;  /* 세로축 스크롤바 길이 */
+	height: 5px;  /* 가로축 스크롤바 길이 */
+}
+
+::-webkit-scrollbar-thumb {
+	border: 8px solid rgba(0, 0, 0, 0);
+    background-clip: padding-box;
+	border-radius: 10px;
+	background-color: #f2b435;
+}
+
+::-webkit-scrollbar-button {
+	width: 0; 
+	height: 0; 
+	display: none;
+}
+
+::-webkit-scrollbar-corner {
+	background-color: transparent; /* 우측 하단의 코너 부분 */
+}
