--- a/css/component.css
+++ b/css/component.css
@@ -5,19 +5,31 @@
     3. a.nav-link.nav-icon : 아이콘만 있는 경우  
 */
 
+.nav li { 
+    padding-left: 1rem; 
+    border-left: 3px solid transparent;
+    transition: all .1s ease-in-out;
+    font-size: .875rem; 
+}
+
 .nav li.nav-tit { 
-    padding-left: 0; 
+    margin-bottom: .5rem; 
     text-transform: uppercase;
     color: currentColor; 
 }
 
-.nav li { 
-    padding: .5rem; 
-    padding-left: .65rem; 
-    font-size: .9rem; 
+.nav li a { 
+    display: block;
+    padding: .5em 0; 
+    font-weight: 400;
 }
 
-.nav li a.active { font-weight: 700; }
+.nav li:hover:not(.nav-tit), 
+.nav li.active { 
+    background: #f1effc; 
+    border-left-color: #5136d3; 
+    padding-left: 1.25rem; 
+}
 
 
 /* 
@@ -39,18 +51,29 @@
 .btn-group .btn { margin-left: .65rem; }
 .btn-group .btn:first-of-type { margin-left: 0; }
 
-.btn-group.col .btn { margin-left: 0; margin-top: 1rem; }
+.btn-group.col .btn { 
+    margin-left: 0; 
+    margin-top: .65rem; 
+}
 .btn-group.col .btn:first-of-type { margin-top: 0; }
+
+.btn-group.p-no .btn { 
+    margin-left: 0; 
+    border-radius: 0;
+    border-left-width: 0 !important;
+}
+
+.btn-group.p-no .btn:first-of-type { border-left-width: 1px !important; }
 
 .btn { 
     background: transparent; 
-    min-width: 6rem; 
+    min-width: 5rem; 
     width: auto; 
     max-width: 10rem; 
-    height: 2.25rem; 
-    line-height: 2.125rem; 
+    height: 2rem; 
+    line-height: 1.9rem; 
     display: inline-block;  
-    padding: 0; 
+    padding: 0 .5em; 
     border: none; 
     border: 1px solid transparent; 
     border-radius: .325rem; 
@@ -60,7 +83,7 @@
     vertical-align: middle; 
     outline: none; 
     font-family: 'Opensans-regular', 'NanumSquare_acR', sans-serif; 
-    font-size: .835rem; 
+    font-size: .875rem; 
     color: currentColor; 
     cursor: pointer;
     transition: all .2s ease-in-out; 
@@ -74,15 +97,15 @@
     display: block; 
 }
 
-.btn span { margin-left: .75rem; }
+.btn span { margin-left: .5rem; }
 
 /* ============================================================ */
 
 .btn-icon { 
-    width: 2.25rem; 
+    width: 2rem; 
     min-width: 0; 
     padding: 0; 
-    font-size: 1.15rem; 
+    font-size: 1rem; 
 }
 
 .btn.btn-icon.radius { border-radius: 50%; }
@@ -158,8 +181,24 @@
 
 /* ============================================================ */
 
-.btn-sm { font-size: 85%; }
-.btn-lg { font-size: 115%; }
+.btn.sm, 
+.btn-group.sm .btn { 
+    min-width: 0; 
+    height: auto; 
+    line-height: initial;
+    padding: .15em .65em;
+    font-size: .7rem; 
+}
+
+.btn.lg, 
+.btn-group.lg .btn { 
+    min-width: 7rem; 
+    width: auto; 
+    max-width: 10rem; 
+    height: 2.85rem; 
+    line-height: 2.75rem; 
+    font-size: 1.25rem; 
+}
 
 /* ============================================================ */
 
@@ -202,12 +241,9 @@ button.ripple:active::after {
     background: #fff; 
     width: 100%; 
     min-width: 350px; 
-    display: inline-flex; 
-    flex-direction: column; 
     /* border: 1px solid #d6d7db;  */
     /* border-radius: .525rem;  */
     /* box-shadow: 0 0 10px 1px rgba(210, 210, 210, 0.15);  */
-    color: #424753; 
 }
 
 .card .card-header { 
