--- a/css/reset.css
+++ b/css/reset.css
@@ -87,11 +87,13 @@ small { font-size: 85%; }
 	height: 5px;  /* 가로축 스크롤바 길이 */
 }
 
+::-webkit-scrollbar-track { background-color: #fff; }
+
 ::-webkit-scrollbar-thumb {
 	border: 8px solid rgba(0, 0, 0, 0);
     background-clip: padding-box;
 	border-radius: 10px;
-	background-color: #f2b435;
+	background-color: #8F98AF;
 }
 
 ::-webkit-scrollbar-button {
