--- a/css/reset.css
+++ b/css/reset.css
@@ -1,5 +1,5 @@
 html, body, div, span, applet, object, iframe,
-blockquote, pre,
+blockquote, 
 a, p, abbr, acronym, address, big, cite, code,
 del, dfn, em, img, ins, kbd, q, s, samp,
 small, strike, sub, sup, tt, var,
