--- a/css/component.css
+++ b/css/component.css
@@ -73,7 +73,7 @@
     height: 2rem; 
     line-height: 1.9rem; 
     display: inline-block;  
-    padding: 0 .5em; 
+    padding: 0 1em; 
     border: none; 
     border: 1px solid transparent; 
     border-radius: .325rem; 
