--- a/css/github-gist.css
+++ b/css/github-gist.css
@@ -1,79 +1,81 @@
-/**
- * GitHub Gist Theme
- * Author : Anthony Attard - https://github.com/AnthonyAttard
- * Author : Louis Barranqueiro - https://github.com/LouisBarranqueiro
- */
-
-.hljs {
-  display: block;
-  background: white;
-  padding: 0.5em;
-  color: #333333;
-  overflow-x: auto;
-}
-
+/* Death Star Comment */
 .hljs-comment,
-.hljs-meta {
-  color: #969896;
+.hljs-quote 
+{
+  color: #B6B18B;
 }
 
+/* Darth Vader */
 .hljs-variable,
 .hljs-template-variable,
-.hljs-strong,
-.hljs-emphasis,
-.hljs-quote {
-  color: #df5000;
-}
-
-.hljs-keyword,
-.hljs-selector-tag,
-.hljs-type {
-  color: #d73a49;
-}
-
-.hljs-literal,
-.hljs-symbol,
-.hljs-bullet,
-.hljs-attribute {
-  color: #0086b3;
-}
-
-.hljs-section,
-.hljs-name {
-  color: #63a35c;
-}
-
-.hljs-tag {
-  color: #333333;
-}
-
-.hljs-title,
-.hljs-attr,
+.hljs-tag,
+.hljs-name,
 .hljs-selector-id,
 .hljs-selector-class,
-.hljs-selector-attr,
-.hljs-selector-pseudo {
-  color: #6f42c1;
+.hljs-regexp,
+.hljs-deletion 
+{
+  color: #EB3C54;
 }
 
-.hljs-addition {
-  color: #55a532;
-  background-color: #eaffea;
+/* Threepio */
+.hljs-number,
+.hljs-built_in,
+.hljs-builtin-name,
+.hljs-literal,
+.hljs-type,
+.hljs-params,
+.hljs-meta,
+.hljs-link 
+{
+  color: #E7CE56;
 }
 
-.hljs-deletion {
-  color: #bd2c00;
-  background-color: #ffecec;
+/* Luke Skywalker */
+.hljs-attribute 
+{
+  color: #EE7C2B;
 }
 
-.hljs-link {
-  text-decoration: underline;
+/* Obi Wan Kenobi */
+.hljs-string,
+.hljs-symbol,
+.hljs-bullet,
+.hljs-addition 
+{
+  color: #4FB4D7;
 }
 
-.hljs-number {
-  color: #005cc5;
+/* Yoda */
+.hljs-title,
+.hljs-section 
+{
+  color: #78BB65;
 }
 
-.hljs-string {
-  color: #032f62;
+/* Mace Windu */
+.hljs-keyword,
+.hljs-selector-tag 
+{
+  color: #B45EA4;
+}
+
+/* Millenium Falcon */
+.hljs 
+{
+  display: block;
+  overflow-x: auto;
+  background: #1C1D21;
+  color: #c0c5ce;
+  padding: 0.5em;
+}
+
+.hljs-emphasis 
+{
+  font-style: italic;
+}
+
+.hljs-strong 
+{
+  font-weight: bold;
 }
